# CombinedAdaptiveSearch

./: .gitignore  AStar.h  BinaryCombinedHeuristic.h  Dijkstra.h  Note esecuzione Tiziano.txt  binaryheap.h  compute_paths  compute_paths.c  graph.h  main.c  run_compute_paths.sh
AlessioP/: AStar.h  BinaryCombinedHeuristic.h  CMakeLists.txt  Dijkstra.h  graph.h  main.c  run.sh  spherical_heuristic.h
AlessioP/BackupAlessioP/: BinaryCombinedHeuristic.h  binaryheap.h  graph.h
AlessioP/BackupPreRefactoring/: AStar.h  BinaryCombinedHeuristic.h  Dijkstra.h  main.c
AlessioP/res/: results_times_heur_W.csv
Backup/: compute_paths_backup.c
BackupAlessioP/: CMakeLists.txt  main.c
Spacchettato/: astar.c  astar.h  compute_paths  compute_paths.c  graph.c  graph.h  heap.c  heap.h  improvements.c  improvements.h
data/: 160WInstancesHeur_AP.csv  8WInstancesHeur_AP.csv
res/: results_heur_W.csv
